Fixes #13
